# alerus

./: Cargo.toml  gen-verusdoc.sh  opendp.sh
.github/workflows/: lean.yml  main.yml  pages.yml
alerus/: Cargo.toml  alias.rs  alias_helper.rs  alias_old.rs  ec.rs  extern_spec.rs  fdr.rs  fldr.rs  fldr_helper.rs  fldr_old.rs  geo.rs  geo_dist.rs  ho_rej_samp.rs  lib.rs  proph_paradox.rs  proph_paradox_mutref.rs  rand_primitives.rs  random_walk.rs  spline.rs
alerus/cks/: bernoulli_exp.rs  bernoulli_exp1.rs  bernoulli_exp1_helper.rs  bernoulli_exp_helper.rs  bernoulli_rational.rs  discrete_gaussian.rs  discrete_gaussian_helper.rs  discrete_laplace.rs  discrete_laplace_helper.rs  exp_rejection.rs  exp_rejection_helper.rs  geometric_exp.rs  geometric_exp_fast.rs  geometric_exp_fast_helper.rs  geometric_exp_helper.rs  mod.rs
alerus/math/: real.rs
alerus/src/: main.rs
random/src/: lib.rs  main.rs
ub/: alias.rs  alias_helper.rs  extern_spec.rs  fdr.rs  fldr.rs  fldr_helper.rs  geo.rs  geo_dist.rs  ho_rej_samp.rs  lib.rs  rand_primitives.rs  ub.rs
ub/discrete_laplace/: bernoulli_exp.rs  bernoulli_exp1.rs  discrete_gaussian.rs  discrete_laplace.rs  exp_rejection.rs  geometric_exp.rs  geometric_exp_fast.rs
veris/: Cargo.toml  alias.rs  fdr.rs  fldr.rs  fldr_helper.rs  geo.rs  geo_dist.rs  ho_rej_samp.rs  lib.rs  rand_primitives.rs  random_walk.rs  verify.sh
veris/cks/: bernoulli_exp.rs  bernoulli_exp1.rs  bernoulli_rational.rs  discrete_gaussian.rs  discrete_laplace.rs  exp_rejection.rs  geometric_exp.rs  geometric_exp_fast.rs  mod.rs
veris/src/: main.rs
(+2 files in other folders)
