[package]
name = "veris"
version = "0.1.0"
edition = "2021"

[lib]
name = "veris"
path = "lib.rs"

[[bin]]
name = "veris"
path = "src/main.rs"

[dependencies]
vstd = "=0.0.0-2026-05-31-0205"
random = { path = "../random" }

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--crate-type=lib --expand-errors"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(verus_only)',
    'cfg(verus_keep_ghost)',
] }
